# iron-hermes-agent

./: .gitignore  Cargo.toml  Cross.toml  README.md  README_CN.md  SETUP.md  SETUP_CN.md  cliff.toml
.github/scripts/: generate_update_manifest.py
.github/workflows/: build.yml  release.yml
crates/iron-core/: Cargo.toml
crates/iron-core/src/: agent.rs  auxiliary_client.rs  budget.rs  context_compressor.rs  cron.rs  cron_tool.rs  error.rs  event.rs  lib.rs  prompt.rs  runtime.rs  todo.rs
crates/iron-core/src/llm/: client.rs  mod.rs  types.rs
crates/iron-core/src/session/: environment.rs  mod.rs  search.rs  search_tool.rs  store.rs  types.rs
crates/iron-core/tests/: agent_events_test.rs  agent_test.rs  compressor_effectiveness_test.rs  compressor_test.rs  cron_tool_test.rs  event_test.rs  llm_types_test.rs  prompt_test.rs  runtime_test.rs  session_test.rs  todo_test.rs
crates/iron-desktop/: Cargo.toml  tauri.conf.json
crates/iron-desktop/capabilities/: default.json
crates/iron-desktop/icons/: icon.icns
crates/iron-desktop/src/: main.rs  tray.rs  updater.rs
crates/iron-memory/: Cargo.toml
crates/iron-memory/src/: error.rs  lib.rs  manager.rs  provider.rs  security.rs  store.rs  tool_module.rs
crates/iron-memory/tests/: manager_test.rs  store_test.rs  tool_module_test.rs
crates/iron-sandbox/: Cargo.toml
crates/iron-sandbox/src/: bridge.rs  error.rs  lib.rs  rpc.rs  sandbox.rs  tool_module.rs
crates/iron-sandbox/tests/: sandbox_comprehensive_test.rs  sandbox_test.rs  tool_module_test.rs
crates/iron-server/: Cargo.toml
crates/iron-server/src/: config.rs  cron_runner.rs  default_config.yaml  lib.rs  main.rs  state.rs
crates/iron-server/src/routes/: chat.rs  config_api.rs  cron.rs  health.rs  mod.rs  models.rs  models_status.rs  session.rs  session_search.rs  sessions.rs  static_files.rs
crates/iron-server/tests/: api_test.rs  compression_integration_test.rs  config_test.rs  runtime_integration_test.rs  tool_integration_test.rs
crates/iron-skills/: Cargo.toml
crates/iron-skills/src/: bundled.rs  discovery.rs  error.rs  lib.rs  manager.rs  parser.rs  security.rs  tool_module.rs  types.rs
crates/iron-skills/tests/: bundled_test.rs  discovery_test.rs  linked_files_test.rs  manager_test.rs  parser_test.rs  tool_module_test.rs
crates/iron-tool-api/: Cargo.toml
crates/iron-tool-api/src/: env.rs  lib.rs  module_trait.rs  registry.rs  types.rs
crates/iron-tool-api/tests/: module_trait_test.rs
crates/iron-tools/: Cargo.toml
crates/iron-tools/src/: error.rs  file.rs  file_module.rs  lib.rs  register_all.rs  registry.rs  terminal.rs  terminal_module.rs  web.rs  web_module.rs
crates/iron-tools/tests/: file_test.rs  register_all_test.rs  registry_test.rs  terminal_test.rs  web_test.rs
docs/specs/: 2026-04-15-session-env-isolation-design.md  2026-04-15-session-env-isolation-plan.md
scripts/: test-tool-registration.sh
web/: index.html
