[workspace]
resolver = "2"
members = [
    "crates/iron-tool-api",
    "crates/iron-core",
    "crates/iron-memory",
    "crates/iron-skills",
    "crates/iron-tools",
    "crates/iron-sandbox",
    "crates/iron-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
include_dir = "0.7"
