[package]
name = "iron-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iron-tools = { path = "../iron-tools" }
iron-memory = { path = "../iron-memory" }
iron-skills = { path = "../iron-skills" }
iron-sandbox = { path = "../iron-sandbox" }
iron-tool-api = { path = "../iron-tool-api" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
bytes = "1"
futures-util = "0.3"
rusqlite = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tokio-util = "0.7"
dirs = "5"
libsimple = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
