[package]
name = "iron-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iron-server = { path = "../iron-server" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
