[package]
name = "iron-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iron-tools = { path = "../iron-tools" }
iron-tool-api = { path = "../iron-tool-api" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tempfile = "3"
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
